# HelpUpController

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
etc/: HelpUpController.in.yaml  process_logs.sh
etc/force_shoes/: F1.yaml  F2.yaml  F3.yaml  F4.yaml  F5.yaml  F6.yaml  F7.yaml  F8.yaml  config.in.h  convert.py
etc/force_shoes/celia/tests-17nov/: note.txt
etc/robot_configs/: e2dr.yaml  hrp4.yaml  rhps1_plate_plate.yaml
etc/trajectories/: log-to-datastore.in.yaml
launch/: fsm_withHuman_display.rviz
modules/: CMakeLists.txt  module.cpp  module.h
modules/rsdf/: PandaHelpUp.rsdf
plugins/: CMakeLists.txt
plugins/XsensReplay/src/: XsensReplay.cpp
src/: CMakeLists.txt  HelpUpController.cpp  HelpUpController.h  MCStabilityPolytope.cpp  MCStabilityPolytope.h  api.h  lib.cpp
src/Tasks/: AdaptiveAdmittance.cpp  AdaptiveAdmittance.h  FirstOrderAdmittance.cpp  FirstOrderAdmittance.h  ForceConstrainedTransformTask.cpp  ForceConstrainedTransformTask.h  TrackDesiredForceTask.h
src/states/: AdjustHumanSurfaces.cpp  AdjustHumanSurfaces.h  CMakeLists.txt  ChangeBalanceConfig.cpp  ChangeBalanceConfig.h  CollisionState.cpp  CollisionState.h  HelpUpController_Initial.cpp  HelpUpController_Initial.h  HumanCoM.cpp  HumanCoM.h  ResetPoses.cpp  ResetPoses.h  RobotHolding.cpp  RobotHolding.h  RobotStabilizer.cpp  RobotStabilizer.h  RobotTakePoseObserved.cpp  RobotTakePoseObserved.h  XsensHuman.cpp  XsensHuman.h
src/states/data/: BaseHRP4.yaml  E2DR.yaml  RHPS1.yaml  SideStep.yaml  StabilizerStates.yaml
src/utils/: CoMQP.cpp  CoMQP.h  ComputationPoint.cpp  ComputationPoint.h  DCM_VRPtracker.cpp  DCM_VRPtracker.h  PointProjector.cpp  PointProjector.h  make_task.h
